--- a/app/src/main/res/layout/member_fragment.xml
+++ b/app/src/main/res/layout/member_fragment.xml
@@ -1,35 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:paddingTop="5dp"
+    android:paddingBottom="5dp">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/memberName"
-        android:textSize="25sp"/>
+        android:textSize="20sp"
+        />
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/members_positions"
+        android:text="@string/member_fragment_positions_text"
+        android:layout_alignParentLeft="true"
+        android:layout_below="@+id/memberName"
+        android:textSize="15sp"
+        />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/members_positions"
-            android:text="@string/member_fragment_positions_text"
-            android:layout_alignParentLeft="true"
-            android:textSize="15sp"
-            />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/members_responsibilities"
+        android:text="@string/member_fragment_responsibilities_text"
+        android:layout_alignParentRight="true"
+        android:layout_below="@+id/memberName"
+        android:textSize="15sp"/>
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/members_responsibilities"
-            android:text="@string/member_fragment_responsibilities_text"
-            android:layout_alignParentRight="true"
-            android:textSize="15sp"/>
-    </RelativeLayout>
-
-</LinearLayout>
+</RelativeLayout>
