notice activity fragments updated from client database

--- a/app/src/main/res/layout/notice_fragment.xml
+++ b/app/src/main/res/layout/notice_fragment.xml
@@ -7,7 +7,6 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="10dp"
         android:id="@+id/relative">
 
         <TextView
@@ -33,6 +32,8 @@
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
         android:layout_below="@id/relative"
-        android:text="" />
+        android:text=""
+        android:textSize="15sp"
+        android:textStyle="bold"/>
 
 </RelativeLayout>
