--- a/app/src/main/res/layout/notice_activity.xml
+++ b/app/src/main/res/layout/notice_activity.xml
@@ -34,7 +34,8 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginTop="19dp"
-            android:orientation="vertical" >
+            android:orientation="vertical"
+            android:gravity="top">
         </LinearLayout>
 
     </ScrollView>
