--- a/app/src/main/res/layout/calendar_activity.xml
+++ b/app/src/main/res/layout/calendar_activity.xml
@@ -19,4 +19,11 @@
         android:layout_alignParentBottom="true"
         android:onClick="onBackButton"/>
 
+    <CalendarView
+        android:id="@+id/calendarView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true" />
+
 </RelativeLayout>
