--- a/app/src/main/res/layout/home_activity.xml
+++ b/app/src/main/res/layout/home_activity.xml
@@ -6,6 +6,16 @@
     android:layout_height="match_parent"
     >
 
+    <Button
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:text="Profile"
+        android:textSize="10sp"
+        android:layout_alignParentRight="true"
+        android:padding="10dp"
+        android:id="@+id/profilebutton"
+        android:onClick="onGoToProfile"/>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="200dp"
