--- a/app/src/main/res/layout/test_database_activity.xml
+++ b/app/src/main/res/layout/test_database_activity.xml
@@ -25,6 +25,13 @@
         android:id="@+id/showSessionsButton"
         android:onClick="showSessions"/>
 
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="show all table"
+        android:id="@+id/showAllTablesButton"
+        android:onClick="showAll"/>
+
     <EditText
         android:id="@+id/editText"
         android:layout_width="match_parent"
@@ -44,6 +51,13 @@
 
         </LinearLayout>
     </ScrollView>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="back"
+        android:id="@+id/back"
+        android:onClick="goback"/>
 
 
 </LinearLayout>
