--- a/app/src/main/res/layout/profile_activity.xml
+++ b/app/src/main/res/layout/profile_activity.xml
@@ -15,8 +15,8 @@
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
         android:layout_alignParentEnd="true"
         app:srcCompat="@drawable/profile_image" />
 
@@ -37,59 +37,88 @@
         android:textSize="20sp"
         android:paddingBottom="30dp"/>
 
-    <TextView
-        android:id="@+id/pos_played_title"
-        android:layout_width="wrap_content"
+    <ScrollView
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="20sp"
-        android:textStyle="bold"
-        android:layout_below="@id/email"
-        android:text="@string/positions_played_title"
-        />
+        android:layout_below="@id/email">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/positions_played"
-        android:layout_below="@id/pos_played_title"
-        android:text="@string/positions_played"/>
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/pos_played_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                android:layout_below="@id/email"
+                android:text="@string/positions_played_title"
+                />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/positions_played"
+                android:layout_below="@id/pos_played_title"
+                />
 
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/addPosition"
-        android:text="@string/add_position"
-        android:layout_below="@id/positions_played"
-        android:onClick="addPosition"
-        />
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/addPosition"
+                android:text="@string/add_position"
+                android:layout_below="@id/positions_played"
+                android:onClick="addPosition"
+                />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/resp_title"
-        android:text="@string/responsibilities_title"
-        android:layout_below="@id/addPosition"
-        android:paddingTop="30dp"
-        android:textStyle="bold"
-        android:textSize="20sp"/>
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/addNewPostitionFragmentContainer"
+                android:orientation="vertical">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/responsibilities"
-        android:layout_below="@id/resp_title"
-        android:text="@string/responsibilities"/>
+            </LinearLayout>
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/addResponsibilty"
-        android:text="@string/add_responsibility"
-        android:layout_below="@id/responsibilities"
-        android:onClick="addResponsibility"
-        />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/resp_title"
+                android:text="@string/responsibilities_title"
+                android:layout_below="@id/addPosition"
+                android:paddingTop="30dp"
+                android:textStyle="bold"
+                android:textSize="20sp"/>
 
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/responsibilities"
+                android:layout_below="@id/resp_title"
+                />
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/addResponsibilty"
+                android:text="@string/add_responsibility"
+                android:layout_below="@id/responsibilities"
+                android:onClick="addResponsibility"/>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/addNewResponsibilityFragmentContainer"
+                android:orientation="vertical">
+
+            </LinearLayout>
+
+
+
+        </LinearLayout>
+    </ScrollView>
 
     <Button
         android:layout_width="wrap_content"
