KPI table added, test database fixed, tabbed activities for stats added

--- a/app/src/main/res/layout/statistics_activity.xml
+++ b/app/src/main/res/layout/statistics_activity.xml
@@ -8,8 +8,30 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Statistics"
+        android:id="@+id/stats_title"
         android:textStyle="bold"
         android:textSize="30sp"/>
+    
+    <Button
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@+id/stats_title"
+        android:text="Team Stats"
+        android:textSize="30dp"
+        android:id="@+id/teamStatsButton"
+        android:onClick="goTeamStats"/>
+
+    <Button
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@+id/teamStatsButton"
+        android:text="My Stats"
+        android:textSize="30dp"
+        android:id="@+id/myStatsButton"
+        android:onClick="goMyStats"
+        />
 
     <Button
         android:layout_width="wrap_content"
