--- a/app/src/main/res/layout/team_stats_tab_leaderboard.xml
+++ b/app/src/main/res/layout/team_stats_tab_leaderboard.xml
@@ -11,6 +11,27 @@
         android:text="Team stats leaderboard"
         android:textSize="20sp"/>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:hint="Enter fixture ID"
+            android:id="@+id/fixtureIdEditText"/>
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Show"
+            android:id="@+id/btnShowLeaderboard"
+            android:onClick="onShowClick"/>
+    </LinearLayout>
+
+
+
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -20,6 +41,16 @@
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:id="@+id/tableContainer">
+
+            <TableLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/tableLayout">
+
+                <TableRow>
+
+                </TableRow>
+            </TableLayout>
 
         </LinearLayout>
     </ScrollView>
