trying to update dates on home page

--- a/app/src/main/res/layout/team_stats_activity.xml
+++ b/app/src/main/res/layout/team_stats_activity.xml
@@ -24,7 +24,7 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="back"
+        android:text="Back"
         android:id="@+id/goBackButton"
         android:onClick="goBack"
         android:layout_alignParentBottom="true"/>
