--- a/app/src/main/res/layout/team_stats_tab_leaderboard.xml
+++ b/app/src/main/res/layout/team_stats_tab_leaderboard.xml
@@ -18,30 +18,12 @@
 
     </Spinner>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-
-        <EditText
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:hint="Enter fixture ID"
-            android:id="@+id/fixtureIdEditText"/>
-
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Show"
-            android:id="@+id/btnShowLeaderboard" />
-    </LinearLayout>
-
 
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:id="@+id/scrollView">
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -54,12 +36,12 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/tableLayout">
 
-                <TableRow>
 
-                </TableRow>
             </TableLayout>
 
         </LinearLayout>
+
+
     </ScrollView>
 
 </LinearLayout>
