--- a/app/src/main/res/layout/home_activity.xml
+++ b/app/src/main/res/layout/home_activity.xml
@@ -42,7 +42,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
-            android:text="@string/next_game_day_text"
+            android:text=""
             android:textStyle="bold"
             android:textSize="35sp"
             android:paddingLeft="5dp"/>
