--- a/app/src/main/res/layout/test_database_activity.xml
+++ b/app/src/main/res/layout/test_database_activity.xml
@@ -42,6 +42,13 @@
             android:text="kpis"
             android:id="@+id/showKPIsButton"
             android:onClick="showKPIs"/>
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="TL"
+            android:id="@+id/totalLeaderboardButton"
+            android:onClick="onTLbutton"/>
     </LinearLayout>
 
     <EditText
