--- a/app/src/main/res/layout/home_activity.xml
+++ b/app/src/main/res/layout/home_activity.xml
@@ -148,6 +148,7 @@
             android:layout_above="@+id/members_home_button"
             android:layout_alignParentLeft="true"
             android:onClick="onGoToNotices"
+            android:textSize="15dp"
             android:text="Notices" />
 
         <Button
@@ -157,6 +158,7 @@
             android:layout_above="@+id/gallery_home_button"
             android:layout_centerHorizontal="true"
             android:onClick="onGoToStats"
+            android:textSize="15dp"
             android:text="Statistics" />
 
         <Button
@@ -166,6 +168,7 @@
             android:layout_above="@+id/members_home_button"
             android:layout_alignParentRight="true"
             android:onClick="onGoToLog"
+            android:textSize="15dp"
             android:text="Log" />
 
         <Button
@@ -175,6 +178,7 @@
             android:layout_below="@+id/notice_home_button"
             android:layout_alignParentStart="true"
             android:onClick="onGoToCalendar"
+            android:textSize="15dp"
             android:text="Calendar" />
 
         <Button
@@ -184,12 +188,14 @@
             android:layout_alignBottom="@+id/members_home_button"
             android:layout_centerHorizontal="true"
             android:onClick="onGoToGallery"
+            android:textSize="15dp"
             android:text="Gallery" />
 
         <Button
             android:id="@+id/members_home_button"
             android:layout_width="120dp"
             android:layout_height="120dp"
+            android:textSize="15dp"
             android:layout_alignParentBottom="true"
             android:layout_alignParentEnd="true"
             android:onClick="onGoToMembers"
