--- a/app/src/main/res/layout/my_sc_stats_activity.xml
+++ b/app/src/main/res/layout/my_sc_stats_activity.xml
@@ -9,25 +9,31 @@
         android:text="Strength and Conditioning Statistics"
         android:textSize="30sp"/>
 
-    <EditText
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/scSessionID"
-        android:hint="Enter session ID"/>
+        android:orientation="horizontal">
+        <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/scSessionID"
+            android:hint="Enter session ID"/>
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/showSession"
-        android:text="Show"
-        android:onClick="onShowSCSession"/>
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/showSession"
+            android:text="Show"
+            android:onClick="onShowSCSession"/>
+    </LinearLayout>
 
-    <TableLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/tableLayout">
+        android:orientation="vertical"
+        android:id="@+id/tableContainer">
 
-    </TableLayout>
+    </LinearLayout>
 
 
 </LinearLayout>
