--- a/app/src/main/res/layout/my_sc_stats_activity.xml
+++ b/app/src/main/res/layout/my_sc_stats_activity.xml
@@ -9,31 +9,55 @@
         android:text="Strength and Conditioning Statistics"
         android:textSize="30sp"/>
 
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-        <EditText
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/scSessionID"
-            android:hint="Enter session ID"/>
-
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/showSession"
-            android:text="Show"
-            android:onClick="onShowSCSession"/>
-    </LinearLayout>
-
-    <LinearLayout
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:id="@+id/tableContainer">
+        android:id="@+id/myScScrollView">
 
-    </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+                <EditText
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/scSessionID"
+                    android:hint="Enter session ID"/>
+
+                <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/showSession"
+                    android:text="Show"
+                    android:onClick="onShowSCSession"/>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:id="@+id/tableContainer">
+
+            </LinearLayout>
+
+
+            <com.jjoe64.graphview.GraphView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/graphView"/>
+
+        </LinearLayout>
+
+
+
+    </ScrollView>
+
+
 
 
 </LinearLayout>
