--- a/app/src/main/res/layout/my_sc_stats_activity.xml
+++ b/app/src/main/res/layout/my_sc_stats_activity.xml
@@ -45,6 +45,20 @@
 
             </LinearLayout>
 
+            <EditText
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/graphStatsET"
+                android:hint="Enter exercise name"/>
+
+            <Spinner
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/scSpinner">
+
+            </Spinner>
+
+
 
             <com.jjoe64.graphview.GraphView
                 android:layout_width="match_parent"
