--- a/app/src/main/res/layout/my_sc_stats_activity.xml
+++ b/app/src/main/res/layout/my_sc_stats_activity.xml
@@ -65,6 +65,12 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/graphView"/>
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/graphContainer"
+                android:orientation="vertical"></LinearLayout>
+
         </LinearLayout>
 
 
