adding graph deatures to my game stats

--- a/app/src/main/res/layout/my_stats_activity.xml
+++ b/app/src/main/res/layout/my_stats_activity.xml
@@ -81,7 +81,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/gameSubTitle"
-        android:text="View Stats"/>
+        android:text="View Stats"
+        android:onClick="onViewGameStats"/>
 
     <Button
         android:id="@+id/seeFeedback"
