--- a/app/src/main/res/layout/statistics_activity.xml
+++ b/app/src/main/res/layout/statistics_activity.xml
@@ -11,27 +11,53 @@
         android:id="@+id/stats_title"
         android:textStyle="bold"
         android:textSize="30sp"/>
-    
-    <Button
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:layout_centerHorizontal="true"
-        android:layout_below="@+id/stats_title"
-        android:text="Team Stats"
-        android:textSize="30dp"
-        android:id="@+id/teamStatsButton"
-        android:onClick="goTeamStats"/>
-
-    <Button
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:layout_centerHorizontal="true"
-        android:layout_below="@+id/teamStatsButton"
-        android:text="My Stats"
-        android:textSize="30dp"
-        android:id="@+id/myStatsButton"
-        android:onClick="goMyStats"
         />
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/stats_title">
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_gravity="center">
+
+            <Button
+                android:layout_width="200dp"
+                android:layout_height="200dp"
+                android:layout_centerHorizontal="true"
+                android:layout_below="@+id/stats_title"
+                android:text="Team Stats"
+                android:textSize="30dp"
+                android:id="@+id/teamStatsButton"
+                android:onClick="goTeamStats"/>
+
+            <Button
+                android:layout_width="200dp"
+                android:layout_height="200dp"
+                android:layout_centerHorizontal="true"
+                android:layout_below="@+id/teamStatsButton"
+                android:text="My Stats"
+                android:textSize="30dp"
+                android:id="@+id/myStatsButton"
+                android:onClick="goMyStats"
+                />
+
+            <Button
+                android:layout_width="200dp"
+                android:layout_height="200dp"
+                android:layout_centerHorizontal="true"
+                android:layout_below="@+id/myStatsButton"
+                android:text="Analyse"
+                android:textSize="30dp"
+                android:id="@+id/analyseButton"
+                android:onClick="goAnalyseStats"
+                android:visibility="invisible"/>
+        </LinearLayout>
+    </ScrollView>
+
 
     <Button
         android:layout_width="wrap_content"
