--- a/app/src/main/res/layout/analyse_stats_activity.xml
+++ b/app/src/main/res/layout/analyse_stats_activity.xml
@@ -29,7 +29,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Select player(s)"
-        android:id="@+id/selectPlayersTV"/>
+        android:id="@+id/selectPlayersTV"
+        />
 
     <Spinner
         android:layout_width="match_parent"
@@ -42,7 +43,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Select indicator(s)"
-        android:id="@+id/selectIndicatorTV"/>
+        android:id="@+id/selectIndicatorTV"
+        android:onClick="onIndicatorClick"/>
 
     <Spinner
         android:layout_width="match_parent"
@@ -51,26 +53,17 @@
 
     </Spinner>
 
-
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/relativeLayout1">
-
-        <TextView
-            android:id="@+id/SelectBox"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/select_string" />
+        android:orientation="vertical"
+        android:id="@+id/popUpContainer"></LinearLayout>
 
 
-        <Button android:id="@+id/create"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="8dp"
-            android:layout_marginLeft="8dp"
-            android:layout_below="@+id/SelectBox" />
-
-
-    </RelativeLayout>
+   <Button
+       android:layout_width="wrap_content"
+       android:layout_height="wrap_content"
+       android:id="@+id/testButton"
+       android:text="test"
+       android:onClick="onTestClick"/>
 </LinearLayout>
