--- a/app/src/main/res/layout/pop_up_fragment.xml
+++ b/app/src/main/res/layout/pop_up_fragment.xml
@@ -1,12 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-
-    <LinearLayout
+    <ListView
+        android:layout_alignParentStart="true"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:id="@+id/ll"></LinearLayout>
-</LinearLayout>
+        android:layout_height="wrap_content"
+        android:id="@+id/listview"></ListView>
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Done"
+        android:id="@+id/doneButton"
+        android:layout_alignParentBottom="true"
+        android:onClick="onDone"
+        />
+
+</RelativeLayout>
