--- a/app/src/main/res/layout/analyse_stats_activity.xml
+++ b/app/src/main/res/layout/analyse_stats_activity.xml
@@ -44,14 +44,19 @@
     </RelativeLayout>
 
 
-
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Show"
+        android:id="@+id/buttonShowGraph"
+        android:onClick="onShowGraph"/>
 
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:id="@+id/popUpContainer"></LinearLayout>
+        android:id="@+id/ll"></LinearLayout>
 
 
 
