--- a/app/src/main/res/layout/analyse_stats_activity.xml
+++ b/app/src/main/res/layout/analyse_stats_activity.xml
@@ -58,6 +58,12 @@
         android:orientation="vertical"
         android:id="@+id/ll"></LinearLayout>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:id="@+id/testLayout"></LinearLayout>
+
 
 
 </LinearLayout>
