--- a/app/src/main/res/layout/team_stats_tab_overview.xml
+++ b/app/src/main/res/layout/team_stats_tab_overview.xml
@@ -5,6 +5,44 @@
     android:layout_height="match_parent">
 
     <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Team Statistics"
+        android:textSize="30sp"
+        android:textStyle="bold"
+        android:id="@+id/teamStatsTitle"
+        />
+
+    <android.support.v7.widget.ButtonBarLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/buttonBarLayout"
+        android:layout_below="@+id/teamStatsTitle"
+        android:background="@android:color/darker_gray">
+
+        <Button
+            android:id="@+id/teamStatOverviewButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="goToOverviewTS"
+            android:text="Overview" />
+
+        <Button
+            android:id="@+id/teamStatGameButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="goToGameTS"
+            android:text="Game" />
+
+        <Button
+            android:id="@+id/teamStatLeaderboardButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="goToLeaderboardTS"
+            android:text="Leaderboard" />
+    </android.support.v7.widget.ButtonBarLayout>
+
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textStyle="bold"
