--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,7 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="holo_light_primary">#72d1fc</color>
+    <color name="bright_foreground_holo_light">#e70b0b</color>
+    <color name="accent_material_dark">#e90a12</color>
 </resources>
